# Practice_concepts_autopilot_localization

./: README.md
test_ceres/: CMakeLists.txt  README.txt  test_ceres.kdev4
test_ceres/.kdev4/: test_ceres.kdev4
test_ceres/include/: basic_structs.h  make_data.hpp  optimization.hpp
test_ceres/src/: loc_optima.cpp  sample_ceres.cpp
test_minMSE/: CMakeLists.txt
test_minMSE/data/: ratio.txt  ratio1.txt
test_minMSE/src/: main.cpp  minMSE.hpp
test_multiThread/: CMakeLists.txt
test_multiThread/src/: main.cpp
test_ransac/: CMakeLists.txt
test_ransac/src/: main.cpp  ransac.hpp
test_redefine_in_another_namespace/: CMakeLists.txt
test_redefine_in_another_namespace/include/: do_something.h
test_redefine_in_another_namespace/src/: do_something.cpp  main.cpp
test_redefine_in_another_namespace/src/utils/: do_something.cpp
test_redefine_in_another_namespace/utils/: do_something.h
test_singleton/: CMakeLists.txt
test_singleton/include/: global.config.hpp
test_singleton/src/: global_config.cpp  main.cpp
test_state_machine/: main  main.cpp
test_template/: main.cpp  run.sh  template.h  test_template
